# command-line-util-chatbot-agent

./: README.md  pyproject.toml
src/ai_cli/: __init__.py  __main__.py  chat.py  cli.py
