[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-cli"
version = "0.1.0"
description = "A CLI-based AI chat interface"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0.0",
    "tiktoken",
    "rich",
    "click"
]

[project.scripts]
ai = "ai_cli.__main__:main"

[project.urls]
Homepage = "https://github.com/djb4ai/command-line-util-chatbot-agent"